--- a/building-blocks/scrolling.html
+++ b/building-blocks/scrolling.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: Scrolling
+title: 스크롤
 ---
-<p>Scrolling allows the user to navigate to content in the overflow using a swipe gesture. The
-scrolling speed is proportional to the speed of the gesture.</p>
+<p>스크롤은 사용자가 스와이프 동작을 사용해서 화면을 벗어나는 내용을 볼 수 있게 해줍니다.
+스크롤 속도는 동작의 속도에 달려 있습니다.</p>
 
-<h2 id="indicator">Scroll Indicator</h2>
+<h2 id="indicator">스크롤 표시</h2>
 
 
-<p>Appears during scrolling to indicate what portion of the content is currently in view.</p>
+<p>뷰에서 현재 내용의 어느 부분인지 보여주기 위해 스크롤 하는 동안에 나타납니다.</p>
 
 
 <div class="framed-galaxynexus-land-span-13">
@@ -20,13 +20,12 @@ scrolling speed is proportional to the speed of the gesture.</p>
 </div>
 
 
-<h2 id="index-scrolling">Index Scrolling</h2>
+<h2 id="index-scrolling">색인 스크롤</h2>
 
 
-<p>In addition to traditional scrolling, a long alphabetical list can also offer index scrolling: a way
-to quickly navigate to the items that begin with a particular letter. With index scrolling, a scroll
-indicator appears even when the user isn't scrolling. Touching or dragging it causes the current
-letter to pop up in a prominent way.</p>
+<p>기존의 스크롤과 더불어 긴 철자 순서 목록은 해당 글자로 시작하는 항목을 빠르게 찾아볼 수 있게 하는
+수단인 색인 스크롤을 제공할 수 있습니다. 색인 스크롤을 사용할 때는 사용자가 스크롤을 하지 않을 때에도
+스크롤 표시가 나타납니다. 터치하거나 드래그를 하면 현재 글자가 돌출 방식으로 튀어나옵니다.</p>
 
 
 <div class="framed-galaxynexus-land-span-13">
