--- a/downloads/index.html
+++ b/downloads/index.html
@@ -58,8 +58,8 @@ title: 다운로드
 
 <p>액션 바 아이콘은 사람들이 앱 상에서 취할 수 있는 가장 중요한 동작을 표시하는 그래픽 버튼입니다.
 <a href="../style/iconography.html">액션 바 도상학에 대해 더 보기</a></p>
-<p>다양한 화면 밀도에 맞게 조정되고, 홀로 라이트, 홀로 다크 테마에
-    사용할 수 있게 맞추어진 아이콘들을 패키지 다운로드에
+<p>다양한 화면 밀도에 맞게 조정하고, 홀로 라이트, 홀로 다크 테마에
+    사용할 수 있게 맞춘 아이콘들을 패키지 다운로드에
     담았습니다. 또한 여러분의 테마에 맞게 수정할 수 있는 스타일을
     갖추지 않은 아이콘과 원본 파일도 있습니다.</p>
 
@@ -111,7 +111,7 @@ title: 다운로드
 
 <h4>색</h4>
 <p>푸른색은 안드로이드 색 팔레트의 표준 강조 색입니다. 필요할 때 보완적으로 사용할 수 있게끔 제각각의 색에 대해 어두운 그림자색이 있습니다.</p>
-<p><a href="../style/color.html">색에 대한 더 보기</a></p>
+<p><a href="../style/color.html">색에 대해 더 보기</a></p>
 
   </div>
   <div class="layout-content-col span-4">
