downloads/index.html 도상학 -> 아이콘 표시법

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -57,7 +57,7 @@ title: 다운로드
   <div class="layout-content-col span-5">
 
 <p>액션 바 아이콘은 사람들이 앱 상에서 취할 수 있는 가장 중요한 동작을 표시하는 그래픽 버튼입니다.
-<a href="../style/iconography.html">액션 바 도상학에 대해 더 보기</a></p>
+<a href="../style/iconography.html">액션 바 아이콘 표시법에 대해 더 보기</a></p>
 <p>다양한 화면 밀도에 맞게 조정하고, 홀로 라이트, 홀로 다크 테마에
     사용할 수 있게 맞춘 아이콘들을 패키지 다운로드에
     담았습니다. 또한 여러분의 테마에 맞게 수정할 수 있는 스타일을
