style/color.html is translated.

--- a/style/color.html
+++ b/style/color.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Color
+title: 색상
 ---
 <style>
   .color-row {
@@ -89,8 +89,8 @@ title: Color
     margin-left: -8px;
   }
 </style>
-<p>Use color primarily for emphasis. Choose colors that fit with your brand and provide good contrast
-between visual components. Note that red and green may be indistinguishable to color-blind users.</p>
+<p>강조를 위해서는 기본 색상을 사용하세요. 시각적 구성요소간에 좋은 대비를 보여주고 여러분의 브랜드에 
+적당한 색을 선택하세요. 빨간색과 초록색은 색맹 사용자들이 알아볼 수 없을지도 모른다는 점을 참고하세요.</p>
 
     
 <div class="color-row-container">
@@ -115,13 +115,13 @@ between visual components. Note that red and green may be indistinguishable to c
 </div>
 
 
-<h2 id="palette">Palette</h2>
+<h2 id="palette">팔레트</h2>
 
 
-<p>Blue is the standard accent color in Android's color palette. Each color has a corresponding darker
-shade that can be used as a complement when needed.</p>
+<p>푸른색은 안드로이드 색상 팔레트의 표준 강조색입니다. 필요할때 보완적으로 사용할 수 있게끔 제각각의 색에 대해
+어두운 그림자 색이 있습니다.</p>
 
-<p><a href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">Download the swatches</a></p>
+<p><a href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">견본 다운로드</a></p>
 
 
 <img src="../media/color_spectrum.png">
