downloads/index.html 색 -> 색상 (partially changed)

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -109,9 +109,9 @@ title: 다운로드
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>색</h4>
-<p>푸른색은 안드로이드 색 팔레트의 표준 강조 색입니다. 필요할 때 보완적으로 사용할 수 있게끔 제각각의 색에 대해 어두운 그림자색이 있습니다.</p>
-<p><a href="../style/color.html">색에 대해 더 보기</a></p>
+<h4>색상</h4>
+<p>푸른색은 안드로이드 색상 팔레트의 표준 강조 색입니다. 필요할 때 보완적으로 사용할 수 있게끔 제각각의 색에 대해 어두운 그림자색이 있습니다.</p>
+<p><a href="../style/color.html">색상에 대해 더 보기</a></p>
 
   </div>
   <div class="layout-content-col span-4">
