이전에 롱 프레스로 번역했기 때문에 거기에 맞춰 변경. 문맥 액션 바로 변경.

--- a/patterns/selection.html
+++ b/patterns/selection.html
@@ -13,23 +13,27 @@ title: 셀렉션
   <div class="layout-content-col span-6">
 
 <h4>무엇이 바뀌었는가?</h4>
-<p>이전버전의 안드로이드에서, 길게누르기 제스쳐는 컨텍스트 메뉴에 선택된 아이템의 컨섹트스 액션을 표시하기위해 널리 사용되었습니다.</p>
-<p>이 패턴은 안드로이드 3.0에서 바뀌었습니다. 길게누르기 제스쳐는 이제 컨텍스트 액션 바(CAB)로 불리우는 새로운 요소에 들어있는 데이터 선택, 컨텍스트 액션, 선택 관리 기능을 위해 쓰여집니다. </p>
+<p>이전버전의 안드로이드에서, 롱 프레스 제스쳐는 선택된 아이템의 문맥
+    액션을 문맥 메뉴에 표시하기위해 널리 사용되었습니다.</p>
+<p>이 패턴은 안드로이드 3.0에서 바뀌었습니다. 길게누르기 제스쳐는 이제
+    문맥 액션 바(CAB, contextual action bar)로 불리우는 새로운 요소에 들어있는 데이터 선택, 문맥 액션, 선택 관리 기능을 위해 쓰여집니다. </p>
 
   </div>
   <div class="layout-content-col span-7">
 
     <img src="../media/selection_context_menu.png"><div class="figure-caption">
-      컨텍스트 메뉴를 보여주기위한 길게누르기 제스쳐의 전형적인 사용.
+      문맥 메뉴를 보여주기위한 길게누르기 제스쳐의 전형적인 사용.
     </div>
 
   </div>
 </div>
 
 
-<h4>컨텍스트 액션 바 (CAB)의 사용</h4>
+<h4>문맥 액션 바 (CAB)의 사용</h4>
 
-<p>셀렉션 CAB는 데이터가 선택되어있는 동안 여러분의 현재 액션바 위에 오버레이되는 임시 액션바 입니다. CAB는 사용자가 선택 가능한 데이터를 길게누르기 한 다음에 표시됩니다.</p>
+<p>선택 문맥 액션 바는 데이터가 선택되어있는 동안 여러분의 현재 액션바
+위에 중첩되는 임시 액션바 입니다. CAB는 사용자가 선택 가능한 데이터를
+롱 프레스 한 다음에 표시됩니다.</p>
 
 
 <img src="../media/selection_cab_big.png">
@@ -42,8 +46,10 @@ title: 셀렉션
 <p>여기서 사용자가 할 수 있는 것:</p>
 <ul>
 <li>아이템을 터치해서 추가적으로 아이템을 선택하세요.</li>
-<li>하이라이트된 모든 데이터 아이템들에게 CAB에 있는 액션을 수행하세요. 이후 CAB는 자동적으로 사라집니다.</li>
-<li>Back 버튼 또는 CAB의 체크마크 버튼으로 CAB를 사라지게 하세요. 선택되었던 모든 하이라이트들도 CAB와 함께 사라집니다.</li>
+<li>하이라이트된 모든 데이터 아이템들에게 문맥 액션 바에 있는 액션을
+수행하세요. 이후 문맥 액션 바는 자동적으로 사라집니다.</li>
+<li>Back 버튼 또는 문맥 액션 바의 체크마크 버튼으로 문맥 액션 바를
+사라지게 하세요. 선택되었던 모든 하이라이트들도 문맥 액션 바와 함께 사라집니다.</li>
 </ul>
 </div>
   <div class="layout-content-col span-7">
@@ -56,17 +62,18 @@ title: 셀렉션
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>CAB 액션들 선택하기</h4>
-<p>여러분들은 CAB에 표시할 액션과 요소들을 결정 할 수 있습니다. 어느 아이템이 꼭데기에 위치할지,액션 오버플로우에 위치할지를 결정하기위해 <a href="actionbar.html">액션 바 패턴</a> 가이드라인을 사용하세요.</p>
-<h4>CAB 액션 동적으로 변경하기</h4>
-<p>사용자가 셀렉션에 아이템을 더 추가하는 대부분의 경우, 여러분들은 CAB의 액션들을 동적으로 변경해야만 합니다. 
+<h4>문맥 액션 바의 액션들 선택하기</h4>
+<p>여러분들은 문맥 액션 바에 표시할 액션과 요소들을 결정 할 수 있습니다. 어느 아이템이 꼭대기에 위치할지,액션 오버플로우에 위치할지를 결정하기위해 <a href="actionbar.html">액션 바 패턴</a> 가이드라인을 사용하세요.</p>
+<h4>문맥 액션 바의 액션을 동적으로 변경하기</h4>
+<p>사용자가 선택에 아이템을 더 추가하는 대부분의 경우, 여러분들은 문맥
+    액션 방의 액션들을 동적으로 변경해야만 합니다. 
 하나만 선택된 데이터 아이템에 적용하는 액션들이 다중 선택된 같은 종류의 데이터 아이템에 적용되지는 없습니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
 
     <img src="../media/selection_adjusting_actions.png"><div class="figure-caption">
-      추가 아이템이 선택된 경우에 CAB의 액션들이 변경됨.
+      추가 아이템이 선택된 경우에 문맥 액션 바의 액션들이 변경됨.
     </div>
 
   </div>
@@ -77,15 +84,16 @@ title: 셀렉션
 
 <ul>
 <li>
-<p>여러분의 앱이 다중 데이터 아이템 선택을 지원할 때마다, 컨택스트 액션 바(CAB)를 사용하십시요.</p>
+<p>여러분의 앱이 다중 데이터 아이템 선택을 지원할 때마다, 문맥 액션 바(CAB)를 사용하십시요.</p>
 </li>
 <li>
-<p>길게누르기 제스쳐를 배타적으로 남겨두세요. 전형적인 컨텍스트 메뉴를 표시하는 방법으로 사용하지 마세요.</p>
+<p>롱 프레스 제스쳐를 배타적으로 남겨두세요. 전형적인 문맥 메뉴를 표시하는 방법으로 사용하지 마세요.</p>
 </li>
 <li>
-<p>만약 리스트에서 다중 선택을 지원하지 않는 다면, 길게누르기는 아무 것도 하지않게 두세요.</p>
+<p>만약 리스트에서 다중 선택을 지원하지 않는 다면, 롱 프레스는 아무 것도 하지않게 두세요.</p>
 </li>
 <li>
-<p>여러분들이 여러분의 액션바에 넣으려고 계획했던 액션들과 같은 방식으로 CAB에 표시하고 싶은 액션들을 계획하세요.</p>
+<p>여러분들이 여러분의 액션바에 넣으려고 계획했던 액션들과 같은
+방식으로 문맥 액션 바에 표시하고 싶은 액션들을 계획하세요.</p>
 </li>
 </ul>
