building-blocks/buttons.html unnatural and incomplete translations is fixed.
Signed-off-by: Leonardo YongUk Kim <dalinaum@gmail.com>

--- a/building-blocks/buttons.html
+++ b/building-blocks/buttons.html
@@ -2,9 +2,9 @@
 layout: default
 title: 버튼
 ---
-<p>텍스트 및/혹은 이미지로 구성되는 버튼은 사용자가 터치했을 때 어떤 동작이 일어날지 알기 쉽게 전달해줍니다.
+<p>텍스트 혹은 이미지로 구성되는 버튼은 사용자가 터치했을 때 어떤 동작이 일어날지 알기 쉽게 전달해줍니다.
 안드로이드는 <em>기본 버튼</em> 및 <em>무테 버튼</em>이라는 두가지 타입의 버튼을 지원합니다.
-둘다 텍스트 라벨 및/혹은 이미지를 포함시킬 수 있습니다.</p>
+둘다 텍스트 레이블 혹은 이미지를 포함할 수 있습니다.</p>
 
 
 <div style="text-align: center">
@@ -17,8 +17,7 @@ title: 버튼
 
 <p>기본 버튼은 테두리와 배경을 가진 전통적인 버튼입니다. 안드로이드는 기본 크기 및 작은 크기의 두가지 스타일의 기본 버튼을 지원합니다.
 기본 크기 버튼은 약간 큰 글꼴 크기로 컨텐츠 양식 외부에 표시되는 것에 최적화되어 있습니다.
-작은 크기 버튼은 다른 컨텐츠와 함께 표시하기 위한 것입니다.
-작은 크기 버튼은 더 작은 글꼴 크기와 더 작은 최소 높이로 구성되어 있습니다.
+작은 크기 버튼은 다른 컨텐츠와 함께 표시하기 위한 것입니다. 이는 더 작은 글꼴 크기와 더 작은 최소 높이로 구성되어 있습니다.
 따라서 다른 UI 요소와 함께 정렬되어야 할 곳에 작은 크기 버튼을 사용해주세요.</p>
 
 
@@ -26,12 +25,12 @@ title: 버튼
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
     <div class="figure-caption">
-      Holo Dark 및 Light의 기본 크기 버튼.
+      홀로 다크 및 홀로 라이트의 기본 크기 버튼.
     </div>
   </div>
   <div class="layout-content-col span-6">
     <div class="figure-caption">
-      Holo Dark 및 Light의 작은 크기 버튼.
+      홀로 다크 및 홀로 라이트의 작은 크기 버튼.
     </div>
   </div>
 </div>
@@ -42,7 +41,7 @@ title: 버튼
 
 <p>무테 버튼은 테두리 및 배경이 없다는 점을 제외하고는 기본 버튼과 흡사합니다.
 따라서 아이콘과 텍스트과 함께 무테 버튼을 사용할 수 있습니다.
-무테 버튼은 시각적으로 기본 버튼보다 더 경량이므로 다른 컨텐트와 함께 멋지게 통합될 수 있습니다.</p>
+무테 버튼은 시각적으로 기본 버튼보다 더 가벼워 보이므로 다른 내용과 함께 멋지게 통합할 수 있습니다.</p>
 
 
 <img src="../media/buttons_borderless.png">
