--- a/building-blocks/grid-lists.html
+++ b/building-blocks/grid-lists.html
@@ -1,24 +1,24 @@
 ---
 layout: default
-title: 그리드 목록
+title: 격자 목록
 ---
 <img src="../media/gridview_overview.png">
-<p>그리드 목록은 표준 목록 뷰 대신 사용할 수 있습니다. 이미지와 함께 데이터 모음을 보여주기 위한 가장 적당한
+<p>격자 목록은 표준 목록 뷰 대신 사용할 수 있습니다. 이미지와 함께 데이터 모음을 보여주기 위한 가장 적당한
 수단입니다. 단순한 목록과는 달리 그리그 목록은 수직, 수평 방향으로 스크롤 할 수 있습니다.</p>
 
 
 
 
-<h2 id="generic_grid">일반적인 그리드</h2>
+<h2 id="generic_grid">일반적인 격자</h2>
 
 
 
-<p>그리드 목록에 있는 항목들은 2차원으로 정렬되어 있으며 내용을 스크롤 할 때 고정되어 있는 것들 중 하나입니다. 
-스크롤 방향은 그리드 목록의 항목 순서에 영향을 줍니다. 스크롤 방향이 일정하지 않으면, 스크롤 할 방향 다음의 
-내용이 위치한 곳을 확인하기 위해 그리드 항목을 잘라내어 사용자가 스크롤 방향을 쉽게 결정할 수 있도록 합니다.
+<p>격자 목록에 있는 항목들은 2차원으로 정렬되어 있으며 내용을 스크롤 할 때 고정되어 있는 것들 중 하나입니다. 
+스크롤 방향은 격자 목록의 항목 순서에 영향을 줍니다. 스크롤 방향이 일정하지 않으면, 스크롤 할 방향 다음의 
+내용이 위치한 곳을 확인하기 위해 격자 항목을 잘라내어 사용자가 스크롤 방향을 쉽게 결정할 수 있도록 합니다.
 </p>
 
-<p>두 방향으로 스크롤하는 그리드 목록을 만드는 것을 피하세요.</p>
+<p>두 방향으로 스크롤하는 격자 목록을 만드는 것을 피하세요.</p>
 
 
 
@@ -30,7 +30,7 @@ title: 그리드 목록
   <div class="layout-content-col span-6">
 
 <h4>수직 스크롤</h4>
-<p>수직 스크롤 그리드 목록의 항목은 왼쪽에서 오른쪽으로, 위에서 아래로 방향인 전통적인 서유럽의 읽기 방향으로
+<p>수직 스크롤 격자 목록의 항목은 왼쪽에서 오른쪽으로, 위에서 아래로 방향인 전통적인 서유럽의 읽기 방향으로
 정렬합니다. 목록을 표시할 때, 사용자가 추가 항목을 보기 위해 목록을 아래로 스크롤 할 수 있게 확인할 하단 줄의
 항목을 잘라버립니다. 사용자가 화면을 회전했을 때, 이 형태를 유지하는지 확인해보세요.</p>
 
@@ -46,20 +46,20 @@ title: 그리드 목록
   <div class="layout-content-col span-6">
 
 <h4>수평 스크롤</h4>
-<p>수평 스크롤 목록은 항목 그리드의 수직 방향을 고정합니다. 수직 스크롤 목록에 비하자면, 정렬 방향은 위에서 아래로,
+<p>수평 스크롤 목록은 항목 격자의 수직 방향을 고정합니다. 수직 스크롤 목록에 비하자면, 정렬 방향은 위에서 아래로,
 왼쪽에서 오른쪽으로 바뀝니다. 스크롤 방향을 나타내는 가장 오른쪽 편에 있는 항목들을 잘라내는 동일한 기술을 사용합니다.</p>
-<p>뷰와 내용의 탐색을 위한 수평 방향의 제스처가 충돌할 수 있으니 스크롤 탭을 수평 스크롤 그리드 목록이 들어간 뷰를 전환하는데
-사용하지 마세요. 그리드 목록에 대한 뷰 탐색에 대해 스크롤 탭을 표시하려면, 목록 탐색을 위해 수직 그리드 스크롤을 사용하세요.</p>
+<p>뷰와 내용의 탐색을 위한 수평 방향의 제스처가 충돌할 수 있으니 스크롤 탭을 수평 스크롤 격자 목록이 들어간 뷰를 전환하는데
+사용하지 마세요. 격자 목록에 대한 뷰 탐색에 대해 스크롤 탭을 표시하려면, 목록 탐색을 위해 수직 격자 스크롤을 사용하세요.</p>
 
   </div>
 </div>
 
 
 
-<h2 id="with-labels">레이블이 있는 그리드 목록</h2>
+<h2 id="with-labels">레이블이 있는 격자 목록</h2>
 
 
-<p>그리드 목록 항목에 대해 추가적인 문맥 정보를 표시하려면 레이블을 사용합니다.</p>
+<p>격자 목록 항목에 대해 추가적인 문맥 정보를 표시하려면 레이블을 사용합니다.</p>
 
 
 
@@ -71,7 +71,7 @@ title: 그리드 목록
   <div class="layout-content-col span-6">
 
 <h4>스타일</h4>
-<p>여러분의 레이블을 표시하려면 그리드 목록 항목의 상단에 반투명 패널을 사용합니다. 대비를 조절할 수 있게 해주며 
+<p>여러분의 레이블을 표시하려면 격자 목록 항목의 상단에 반투명 패널을 사용합니다. 대비를 조절할 수 있게 해주며 
  내용을 "빛나게" 하는 동안 레이블의 가독성을 보장합니다.</p>
 
   </div>
