--- a/building-blocks/tabs.html
+++ b/building-blocks/tabs.html
@@ -22,7 +22,7 @@ title: 탭
   <div class="layout-content-col span-7">
 
     <video width="400" class="with-shadow play-on-hover" autoplay><source src="../media/tabs_scrolly.mp4" type="video/mp4"><source src="../media/tabs_scrolly.webm" type="video/webm"><source src="../media/tabs_scrolly.ogv" type="video/ogg"></video><div class="figure-caption">
-      구글 플레이의 Scrolling tabs
+      Google Play의 스크롤 탭
       <div class="video-instructions">&#160;</div>
     </div>
 
