theme names are translated and more.

--- a/style/iconography.html
+++ b/style/iconography.html
@@ -99,8 +99,8 @@ title: 아이콘 표시법
 <p>
 
 "새로고침", "공유" 등의 일반적인 액션들은 미리정의된 아이콘을 사용해야합니다. 
-다양한 크기의 화면과 Holo Light, Holo Dark 테마에서 사용할 수 있도록 크기가 맞춰진 아이콘 패키지를 아래의 경로에서 받으실 수 있습니다.
-그리고 패키지에는 여러분들의 테마에 맞게 수정할 수 있는 기본 아이콘들이 포함되어 있습니다. 게다가 추가 수정을 위한 Adobe&#174; Illustrator&#174; 원본 파일도 포함되어 있습니다. 
+다양한 크기의 화면과 홀로 라이트, 홀로 다크 테마에서 사용할 수 있도록 크기가 맞춰진 아이콘 패키지를 아래의 경로에서 받으실 수 있습니다.
+그리고 패키지에는 여러분들의 테마에 맞게 수정할 수 있는 기본 아이콘들을 포함하고 있습니다. 게다가 추가 수정을 위한 Adobe&#174; Illustrator&#174; 원본 파일도 포함하고 있습니다. 
 </p>
 
 <p>
@@ -152,7 +152,7 @@ title: 아이콘 표시법
 
 <h4>스타일</h4>
 <p>단순하게 그리고 부드러운 곡선과 매끈한 형태를 가지게 하세요. 만약 아이콘이 얇다면, 표시영역이 채워지도록 좌 또는 우로 45&#176; 회전 하세요.
-두꺼운 선과 표시되지 않는 공간은 최소 2dp이상이어야 합니다.</p>
+두꺼운 선과 표시하지 않는 공간은 최소 2dp이상이어야 합니다.</p>
 
   </div>
 </div>
@@ -244,7 +244,7 @@ title: 아이콘 표시법
 
 <h4>Colors</h4>
 <p>비중립적인 색들은 목적에 맞게 아껴서 사용하세요. 예를들어 Gmail에서는 메세지에 즐겨찾기 표시를 위해 별표안에 노란색을 사용합니다. 
-만약 아이콘이 의미를 가진 것이라면, 배경과 잘 대조되는 색을 선택하세요.</p>
+만약 아이콘이 의미를 가진 것이라면, 배경과 잘 어울리는 색을 선택하세요.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -315,7 +315,7 @@ title: 아이콘 표시법
   <div class="layout-content-col span-4">
 
 <h4>색상</h4>
-<p>알림아이콘은 반드시 흰색으로만 되어야합니다. 왜냐하면 시스템이 아이콘을 축소하거나 어둡게할 수 있기 때문입니다.</p>
+<p>알림아이콘은 반드시 흰색이어야만 합니다. 왜냐하면 시스템이 아이콘을 축소하거나 어둡게할 수 있기 때문입니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
