style/themes.html remove passive
Signed-off-by: Leonardo YongUk Kim <dalinaum@gmail.com>

--- a/style/themes.html
+++ b/style/themes.html
@@ -6,15 +6,15 @@ title: 테마
   <div class="layout-content-col span-5">
 
     <img src="../media/themes_holo_light.png"><div class="figure-caption">
-      홀로 라이트 테마가 적용된 Gmail.
+      홀로 라이트 테마를 적용한 Gmail.
     </div>
 
     <img src="../media/themes_holo_dark.png"><div class="figure-caption">
-      홀로 다크 테마가 적용된 설정.
+      홀로 다크 테마를 적용한 설정.
     </div>
 
     <img src="../media/themes_holo_inverse.png"><div class="figure-caption">
-      다크 액션바(dark action bar)에 홀로 라이트 테마가 적용된 토크.
+      다크 액션바(dark action bar)에 홀로 라이트 테마를 적용한 토크.
     </div>
 
   </div>
