--- a/building-blocks/progress.html
+++ b/building-blocks/progress.html
@@ -1,22 +1,21 @@
 ---
 layout: default
-title: Progress and Activity
+title: 프로그레스와 활동
 ---
-<p>When an operation of interest to the user is taking place over a relatively long period of time,
-provide visual feedback that it's still happening and in the process of being completed.</p>
+<p>사용자가 긴 시간동안 머물러 있을 흥미로운 작업을 진행할 때, 여전히 무언가를 진행하고 있고,
+곧 완료할 프로세스임을 알리는 시각적인 반응물을 제공하세요.</p>
 
-<h2 id="progress">Progress</h2>
+<h2 id="progress">프로그레스</h2>
 
 
-<p>If you know the percentage of the operation that has been completed, use a determinate progress bar
-to give the user a sense of how much longer it will take.</p>
+<p>처리를 완료한 시점의 백분율을 알고 있다면, 얼마나 오랜 시간이 걸릴지를 사용자에게 알려주는 확실한
+프로그레스 바를 사용하세요.</p>
 
 
 <img src="../media/progress_download.png">
-<p>The progress bar should always travel from 0% to 100% completion. Avoid setting the bar to a lower
-value than a previous value, or using the same progress bar to represent the progress of multiple
-events, since doing so makes the display meaningless. If you're not sure how long a particular
-operation will take, use an indeterminate progress indicator.</p>
+<p>프로그레스 바는 항상 0%부터 100% 완료시점까지 진행합니다. 이전 값보다 낮은 값을 설정하는 행동이나
+의미 없는 내용을 표시하는 여러 동작의 과정을 표시할 때 같은 프로그레스 바를 사용하는 것은 피하세요.
+제각각의 동작이 얼마나 걸릴지 확실하지 않다면 대략적인 프로그레스 표시를 사용하세요.</p>
 
 
 <div class="vspace size-2">&#160;</div>
@@ -24,16 +23,15 @@ operation will take, use an indeterminate progress indicator.</p>
 
 <img src="../media/progress_themes.png">
 <div class="figure-caption">
-  Progress bar in Holo Dark and Holo Light.
+  홀로 다크와 홀로 라이트에서의 프로그레스 바 입니다.
 </div>
 
 
-<h2 id="activity">Activity</h2>
+<h2 id="activity">활동</h2>
 
 
-<p>If you don't know how much longer an operation will continue, use an indeterminate progress
-indicator. There are two styles available: a flat bar and a circle. Use the one that best fits the
-available space.</p>
+<p>처리가 얼마나 계속될지 모를 때, 대략적인 프로그레스 표시를 사용하세요. 두가지 방식을 사용할 수 있습니다.
+하나는 밋밋한 바이고 하나는 원입니다. 사용할 수 있는 공간에 가장 잘 맞는 것을 사용하세요.</p>
 
 
 
@@ -46,12 +44,11 @@ available space.</p>
 
     <ol>
 <li class="value-1">
-<h4>Activity bar (shown with the Holo Dark theme)</h4>
+<h4>활동 바 (홀로 다크 테마에서 보임)</h4>
         <p>
 
-An indeterminate activity bar is used at the start of an application download because Google Play hasn't
-been able to contact the server yet, and it's not possible to determine how long it will take for
-the download to begin.
+대략적인 활동 바는 앱을 다운로드 할 때 사용하는데, Google Play가 서버에 아직 연결할 수 없고,
+다운로드를 시작하는데 시간이 얼마나 걸릴지 알 수 없기 때문입니다.
 
         </p>
       </li>
@@ -69,11 +66,11 @@ the download to begin.
 
     <ol>
 <li class="value-2">
-<h4>Activity circle (shown with the Holo Light theme)</h4>
+<h4>활동 원 (홀로 라이트 테마에서 보임)</h4>
         <p>
 
-An indeterminate activity circle is used in the Gmail application when a message is being
-loaded because it's not possible to determine how long it will take to download the email.
+		대략적인 활동 서클은 Gmail 앱에서 메시지를 불러오는 중일 때 사용하는데, 이메일을 다운로드하는데
+		시간이 얼마나 걸릴지 알 수 없기 때문입니다.
 
         </p>
       </li>
@@ -82,6 +79,6 @@ loaded because it's not possible to determine how long it will take to download 
 </div>
 
 
-<p>You should only use one activity indicator on screen per activity, and it should appropriately sized
-for the surrounding context. For example, the largest activity circle works well when displayed in a
-blank content area, but not in a smaller dialog box.</p>
+<p>각 활동의 화면에서 하나의 활동 표시를 사용할 수 있고, 상황에 따라 적당한 크기로 맞추어야 합니다.
+예를 들어, 내용이 없는 공간에 표시할 때는 큰 활동 원이 괜찮겠지만, 더 작은 다이얼로그 박스에는 어울리지
+않을 것입니다.</p>
