building-blocks/spinners.html is translated

--- a/building-blocks/spinners.html
+++ b/building-blocks/spinners.html
@@ -1,30 +1,29 @@
 ---
 layout: default
-title: Spinners
+title: 스피너
 ---
-<p>Spinners provide a quick way to select one value from a set. In the default state, a spinner shows
-its currently selected value. Touching the spinner displays a dropdown menu with all other available
-values, from which the user can select a new one.</p>
+<p>스피너는 값들의 모음에서 하나의 값을 빠르게 선택하는 방법을 제공합니다. 기본 상태에서, 스피너는 현재
+선택한 값을 보여줍니다. 스피너를 터치하면 사용자가 새로 선택할 수 있는 것부터 다른 모든 존재하는 값들을
+드롭 다운 메뉴에 표시합니다.</p>
 
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-    <img src="../media/spinners_form.png"><h4>Spinners in forms</h4>
-<p>Spinners are useful for data picking in forms. They are compact and integrate nicely with other
-components. Use spinners in forms for both simple data input and in combination with other input
-fields. For example, a text field might let you edit an email address for a contact, while its
-associated spinner allows you to select whether it's a Home or Work address.</p>
+    <img src="../media/spinners_form.png"><h4>폼에서의 스피너</h4>
+	<p>스피너는 폼에서 데이터를 고를때 유용합니다. 작고 다른 구성요소와 멋지게 어울립니다. 간단한 데이터를
+	입력할 때, 그리고 다른 입력 필드와 조합할 때 폼에서 스피너를 사용하세요. 예를 들어, 텍스트 필드는 연락처
+	에 들어갈 이메일 주소를 편집하게 하고, 여기에 관련된 스피너는 집 주소 인지 회사 주소인지 선택할 수 있게
+	해줍니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
 
-    <img src="../media/spinners_actionbar.png"><h4>Spinners in action bars</h4>
-<p>Use spinners in action bars to switch views. For example, Gmail uses a spinner to permit switching
-between accounts or commonly used labels. Spinners are useful when changing the view is important to
-your app, but not necessarily a frequent occurrence. In cases where view switching is frequent, use
-tabs.</p>
+    <img src="../media/spinners_actionbar.png"><h4>액션 바에서의 스피너</h4>
+	<p>뷰를 전환하려면 액션 바에서 스피너를 사용합니다. 예를 들어, Gmail 에서는 계정이나 자주 사용하는 레이블을
+	전솬하기 위해 스피너를 사용합니다. 스피너는 여러분의 앱에서 뷰를 전환하는 것이 중요하지만, 자주 발생할
+	필요가 없을때 유용합니다. 뷰를 자주 전환할 경우 탭을 사용합니다.</p>
 
   </div>
 </div>
@@ -32,5 +31,5 @@ tabs.</p>
 
 <img src="../media/spinners_hololightanddark.png">
 <div class="figure-caption">
-  Spinners in the Holo Dark and Holo Light themes, in various states.
+  홀로 다크 테마와 홀로 라이트 테마에서 다양한 상태의 스피너입니다.
 </div>
