building-blocks/index.html is translated
Signed-off-by: Leonardo YongUk Kim <dalinaum@gmail.com>

--- a/building-blocks/index.html
+++ b/building-blocks/index.html
@@ -16,8 +16,8 @@ title: Building Blocks
 </style>
 <div id="landing-graphic-container">
   <div id="text-overlay">
-    Your inventory of ready-to-use elements for creating outstanding apps.
-    <br><br><a href="tabs.html" class="landing-page-link">Tabs</a>
+    뛰어난 앱을 만들기 위해 준비한 여러분의 요소들입니다.
+    <br><br><a href="tabs.html" class="landing-page-link">탭</a>
   </div>
 
   <a href="tabs.html">
