--- a/patterns/notifications.html
+++ b/patterns/notifications.html
@@ -1,34 +1,34 @@
 ---
 layout: default
-title: Notifications
+title: 알림(Notifications)
 ---
-<p>The notification system allows your app to keep the user informed about important events, such as
-new messages in a chat app or a calendar event.</p>
+<p>알림 시스템은 당신의 앱이 대화 앱에서 새로운 메시지가 도착했거나 캘린더 이벤트가 있을 때와 같이
+사용자에게 중요한 이벤트가 있을 경우 통보할 수 있도록 해 줍니다.</p>
 
-<p>To create an app that feels streamlined, pleasant, and respectful, it is important to design your
-notifications carefully. Notifications embody your app's voice, and contribute to your app's
-personality. Unwanted or unimportant notifications can annoy the user, so use them judiciously.</p>
+<p>간결하고 쾌적하면서도 정중한 느낌을 주는 앱을 만들기 위해
+알림을 주의 깊게 디자인하는 것이 중요합니다.
+알림은 앱의 목소리와도 같고, 앱에 개성 또한 부여합니다.
+원치 않는 혹은 중요치 않은 알림은 사용자를 짜증나게 할 수 있으므로 신중하게 사용해주세요.</p>
 
-<h4>When to display a notification</h4>
+<h4>알림을 표시해야 할 때</h4>
 
-<p>To create an application that people love, it's important to recognize that the user's attention and
-focus is a resource that must be protected. To use an analogy that might resonate with software
-developers, the user is not a method that can be invoked to return a value.  The user's focus is a
-resource more akin to a thread, and creating a notification momentarily blocks the user thread as
-they process and then dismiss the interruptive notification.</p>
+<p>사람들에게 사랑받는 애플리케이션을 만들려면, 사용자의 주의와 시선은 보호되어야 할 리소스 임을 고려하는 것이 중요합니다
+소프트웨어 개발자가 이해할 수 있는 표현을 빌리자면, 사용자는 어떤 값을 반환받기 위해 호출할 수 있는 메소드가 아닙니다.
+사용자의 시선을 스레드 리소스에 빗대자면, 알림을 생성하는 것은 잠깐 사용자 스레드를 멈추고 그것을 처리한 후에 방해하는
+알림을 제거합니다.</p>
 
-<p>Android's notification system has been designed to quickly inform users of events while they focus
-on a task, but it is nonetheless still important to be conscientious when deciding to create a
-notification.</p>
+<p>안드로이드 알림 시스템은 사용자가 작업 중일 때 빠르게 이벤트를 통지할 수 있도록 디자인되었으나,
+알림을 생성하기로 결정할 때 양심적이 되는 것은 여전히 중요합니다.</p>
 
-<p>While well behaved apps generally only speak when spoken to, there are some limited cases where an
-app actually should interrupt the user with an unprompted notification.</p>
+<p>잘 만들어진 앱은 요청하지 않았지만 어쩔 수 없이 사용자를 방해해야 하는 한정된 경우에만
+알림을 표시합니다.
+</p>
 
-<p>Notifications should be used primarily for <strong>time sensitive events</strong>, and especially if these
-synchronous events <strong>involve other people</strong>. For instance, an incoming chat is a real time and
-synchronous form of communication: there is another user actively waiting on you to respond.
-Calendar events are another good example of when to use a notification and grab the user's
-attention, because the event is imminent, and calendar events often involve other people.</p>
+<p>알림은 주로 <string>시간 기반 이벤트</string>에 사용되어야 하며,
+특히 <strong>다른 사람과 엮인</strong> 동시적인 이벤트인 경우 더욱 그러합니다.
+예를 들어, 받은 대화는 실시간이며 동시적인 커뮤니케이션입니다: 다른 사용자가 응답을 기다리고 있다구요.
+캘린더 이벤트는 알림을 사용해 사용자의 주의를 기울이도록 해야 할 또다른 좋은 예입니다.
+왜냐면 해당 이벤트가 임박했으며, 캘린더 이벤트는 종종 다른 사람과 엮여 있기 때문입니다.</p>
 
 
 <img src="../media/notifications_pattern_real_time_people.png">
@@ -38,37 +38,35 @@ attention, because the event is imminent, and calendar events often involve othe
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>When not to display a notification</h4>
-<p>There are however many other cases where notifications should not be used:</p>
+<h4>알림을 표시해선 안될 때</h4>
+<p>알림이 사용되어서는 안 되는 다음과 같은 상황이 있습니다:</p>
 <ul>
 <li>
-<p>Don't notify the user of information that is not directed specifically at them, or information
-that is not truly time sensitive.  For instance the asynchronous and undirected updates flowing
-through a social network do not warrant a real time interruption.</p>
+<p>사용자에게 분명하게 알려야 할 정보가 아닌 경우 및 긴급하지 않은 정보라면 알려주지 마세요.
+예를 들어 소셜 네트워크와 같이 비동기적이고 대상이 불분명하고 많은 양의 업데이트는
+실시간으로 방해를 하는 것이 허락되지 않습니다.</p>
 </li>
 <li>
-<p>Don't create a notification if the relevant new information is currently on screen. Instead, use
-the UI of the application itself to notify the user of new information directly in context. For
-instance, a chat application should not create system notifications while the user is actively
-chatting with another user.</p>
+<p>관련된 새 정보가 현재 화면에 나타나는 경우 알림을 만들지 마세요. 대신에 문맥 내에 새로운 정보가 있음을
+사용자에게 애플리케이션 UI를 통해 바로 알려주세요.
+예를 들어 대화 애플리케이션은 사용자가 다른 사용자와 대화 중일 때는 시스템 알림을 생성하지 않아야 합니다.</p>
 </li>
 <li>
-<p>Don't interrupt the user for low level technical operations, like saving or syncing information,
-or updating an application, if it is possible for the system to simply take care of itself without
-involving the user.</p>
+<p>사용자가 간섭하지 않아도 시스템 스스로 알아서 처리할 수 있다면
+저장 중이거나 동기화 중이거나 애플리케이션을 업데이트하는 중과 같은 저수준 기술 정보로 사용자를 방해하지 마세요.</p>
 </li>
 <li>
-<p>Don't interrupt the user to inform them of an error if it is possible for the application to
-quickly recover from the error on its own without the user taking any action.</p>
+<p>사용자가 어떤 행동을 하지 않아도 애플리케이션 스스로 빠르게 문제에서 벗어날 수 있는 상황이라면
+오류를 알려 사용자를 방해하지 마세요.</p>
 </li>
 <li>
-<p>Don't use notifications for services that the user cannot manually start or stop.</p>
+<p>사용자가 스스로 시작하거나 멈출 수 없는 서비스에는 알림을 사용하지 마세요.</p>
 </li>
 <li>
-<p>Don't create superfluous notifications just to get your brand in front of users. Such
-notifications will only frustrate and likely alienate your audience. The best way to provide the
-user with a small amount of updated information and to keep them engaged with your application is to
-develop a widget that they can choose to place on their home screen.</p>
+<p>단지 사용자에게 브랜드를 알리기 위한 불필요한 알림은 만들지 마세요.
+그런 알림은 그저 사용자를 불만스럽게 만들어 고객을 잃게 만들 뿐입니다.
+애플리케이션의 사용자에게 소량의 최신 정보를 제공하면서도 지속적으로 관심을 갖게 만드는 최고의 방법은
+홈 화면에 배치하고 싶은 위젯을 개발하는 것입니다.</p>
 </li>
 </ul>
 </div>
@@ -79,7 +77,7 @@ develop a widget that they can choose to place on their home screen.</p>
 </div>
 
 
-<h2 id="design-guidelines">Design Guidelines</h2>
+<h2 id="design-guidelines">디자인 가이드라인</h2>
 
 
 <div class="layout-content-row">
@@ -90,68 +88,64 @@ develop a widget that they can choose to place on their home screen.</p>
   <div class="layout-content-col span-6">
 
 <h4>Make it personal</h4>
-<p>For notifications of items sent by another user (such as a message or status update), include that
-person's image.</p>
-<p>Remember to include the app icon as a secondary icon in the notification, so that the user can
-still identify which app posted it.</p>    
+<p>다른 사용자의 (메시지나 상태 업데이트와 같은) 내역을 알릴 때
+사용자의 이미지를 포함하세요.</p>
+<p>앱 아이콘은 알림에서 두번째 아이콘으로 포함된다는 걸 기억하세요.
+따라서 사용자는 여전히 어떤 앱이 알림을 표시하는지 분간할 수 있습니다.</p>    
 
   </div>
 </div>
 
 
-<h4>Navigate to the right place</h4>
+<h4>올바른 곳으로 탐색하세요</h4>
 
-<p>When the user touches a notification, be open your app to the place where the user can consume and
-act upon the data referenced in the notification. In most cases this will be the detail view of a
-single data item (e.g. a message), but it might also be a summary view if the notification is
-stacked (see <em>Stacked notifications</em> below) and references multiple items. If in any of those cases
-the user is taken to a hierarchy level below your app's top-level, insert navigation into your app's
-back stack to allow them to navigate to your app's top level using the system back key. For more
-information, see the chapter on <em>System-to-app navigation</em> in the
-<a href="navigation.html">Navigation</a> design pattern.</p>
+<p>사용자가 알림을 터치했을 때, 앱이 사용자가 알림에서 표시되고 있는 자료를 바로 확인하고 처리할 수 있는 곳에서 열리도록 해주세요.
+대부분 (메시지와 같은) 단일 자료 항목을 표시하는 세부 뷰를 열겠지만,
+알림이 누적되어(아래 <em>누적된 알림</em> 참조) 여러 항목을 참조하는 경우 요약 뷰를 열 수도 있을 것입니다.
+이 때 사용자가 앱의 탑 레벨 내의 계층 레벨에 도착한 경우,
+시스템 백 키로 앱의 최상위로 이동할 수 있도록 앱의 백 스택에 이동 경로를 삽입해주세요.
+더 자세한 정보는 <a href="navigation.html">탐색</a> 디자인 패턴의 <em>시스템에서 앱으로 이어지는 탐색</em> 장에서 볼 수 있습니다.
+</p>
 
-<h4>Timestamps for time sensitive events</h4>
+<h4>시간 기반 이벤트의 알림 시간(timestamp)</h4>
 
-<p>By default, standard Android notifications include a timestamp in the upper right corner. Consider
-whether the timestamp is valuable in the context of your notification. If the timestamp is not
-valuable, consider if the event is important enough to warrant grabbing the user's attention with a
-notification. If the notification is important enough, decide if you would like to opt out of
-displaying the timestamp.</p>
+<p>기본적으로 표준 안드로이드 알림은 우상측에 알림이 발생한 시간이 표시되어 있습니다.
+알림에서 이러한 시간 표시가 유용한지 검토해주세요.
+만약 시간 표시가 불필요하다면 해당 이벤트가 사용자의 주의를 끌기 위해
+알림으로 표시되어야 할 중요한 이유가 충분히 있는지 고려해주세요.
+만약 알림이 정말 중요하다면 이제 시간 표시를 제거해도 괜찮을지 결정하도록 합시다.</p>
 
-<p>Include a timestamp if the user likely needs to know how long ago the notification occurred. Good
-candidates for timestamps include communication notifications (email, messaging, chat, voicemail)
-where the user may need the timestamp information to understand the context of a message or to
-tailor a response.</p>
+<p>사용자가 얼마 전에 알림이 발생했는지 알아야 하는 경우라면 알림 시간을 포함해 주세요.
+알림 시간의 좋은 사례로 커뮤니케이션 통지 (이메일, 메시징, 대화, 음성 메일)가 있습니다.
+사용자가 메시지의 맥락을 이해하거나 어떤 응답을 할 때 시간 정보가 필요할 수 있습니다.</p>
 
-<h4>Stack your notifications</h4>
+<h4>알림을 누적시켜주세요</h4>
 
-<p>If your app creates a notification while another of the same type is still pending, avoid creating
-an altogether new notification object. Instead, stack the notification.</p>
+<p>동일한 타입의 알림이 계류 중일 때 다른 알림을 표시해야 할 경우라면 완전히 새로운 알림 객체를 생성하는 것은 피해주세요.
+대신에 알림을 누적시켜주세요.</p>
 
-<p>A stacked notification builds a summary description and allows the user to understand how many
-notifications of a particular kind are pending.</p>
+<p>누적 알림은 사용자가 특정 종류의 알림이 얼마나 많이 계류중인지 간단한 개요를 표시합니다.</p>
 
-<p><strong>Don't</strong>:</p>
+<p><strong>이러지 마세요</strong>:</p>
 
 
 <img src="../media/notifications_pattern_additional_fail.png">
-<p><strong>Do</strong>:</p>
+<p><strong>이렇게 하세요</strong>:</p>
 
 
 <img src="../media/notifications_pattern_additional_win.png">
-<p>If you keep the summary and detail information on different screens, a stacked notification may need
-to open to a different place in the app than a single notification.</p>
+<p>개요 및 세부 정보를 각각 다른 화면에 표시하고 있는 경우에는
+누적 알림은 하나의 알림으로 표시할 때와 다른 화면을 열어야 할 수도 있습니다.</p>
 
-<p>For example, a single email notification should always open to the content of the email, whereas a
-stacked email notification opens to the Inbox view.</p>
+<p>예를 들어 단일 이메일 알림은 언제나 해당 이메일 내용을 열지만,
+누적 이메일 알림은 받은 편지함 뷰를 엽니다.</p>
 
-<h4>Clean up after yourself</h4>
+<h4>사후에는 알아서 사라지세요</h4>
 
-<p>Just like calendar events, some notifications alert the user to an event that happens at a
-particular point in time. After that moment has passed, the notification is likely not important to
-the user anymore, and you should consider removing it automatically.  The same is true for active
-chat conversations or voicemail messages the user has listened to, users should not have to manually
-dismiss notifications independently from taking action on them.</p>
+<p>캘린더 이벤트와 같이 어떤 알림은 특정한 때에만 이벤트가 발생을 했음을 사용자에게 통보합니다.
+그 때가 지나가면 해당 알림은 사용자에게는 더 이상 중요하지 않을테니 자동으로 알림을 지우는 것을 고려해보세요.
+The same is true for active chat conversations or voicemail messages the user has listened to, 
+users should not have to manually dismiss notifications independently from taking action on them.</p>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -160,7 +154,7 @@ dismiss notifications independently from taking action on them.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Provide a peek into your notification</h4>
+<h4>알림 내용을 엿볼 수 있게 하세요</h4>
 <p>You can provide a short preview of your notification's content by providing optional ticker text.
 The ticker text is shown for a short amount of time when the notification enters the system and then
 hides automatically.</p>
@@ -173,28 +167,28 @@ hides automatically.</p>
 </div>
 
 
-<h4>Make notifications optional</h4>
+<h4>알림을 선택사항으로 만들어주세요</h4>
 
 <p>Users should always be in control of notifications. Allow the user to silence the notifications from
 your app by adding a notification settings item to your application settings.</p>
 
-<h4>Use distinct icons</h4>
+<h4>구별되는 아이콘을 사용하세요</h4>
 
 <p>By glancing at the notification area, the user should be able to discern what notification types are
 currently pending.</p>
 
-<p><strong>Do</strong>:</p>
+<p><strong>이렇게 하세요</strong>:</p>
 
 <ul>
 <li>Look at the notification icons the Android apps already provide and create notification icons for
   your app that are sufficiently distinct in appearance.</li>
 </ul>
-<p><strong>Don't</strong>:</p>
+<p><strong>이러지 마세요</strong>:</p>
 
 <ul>
 <li>Use color to distinguish your app from others. Notification icons should generally be monochrome.</li>
 </ul>
-<h2 id="interacting-with-notifications">Interacting With Notifications</h2>
+<h2 id="interacting-with-notifications">알림과 상호 작용</h2>
 
 
 <div class="layout-content-row">
@@ -235,7 +229,7 @@ notification drawer is opened by touching anywhere inside the notification area.
 </div>
   <div class="layout-content-col span-6">
 
-<h4>Ongoing notifications</h4>
+<h4>진행 중 알림</h4>
 <p>Ongoing notifications keep users informed about an ongoing process in the background. For example,
 music players announce the currently playing track in the notification system and continue to do so
 until the user stops the playback. They can also be used to show the user feedback for longer tasks
@@ -249,7 +243,7 @@ the notification drawer.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-12">
 
-<h4>Dialogs and toasts are for feedback not notification</h4>
+<h4>대화상자와 토스트는 피드백이지 알림이 아니에요</h4>
 <p>Your app should not create a dialog or toast if it is not currently on screen. Dialogs and Toasts
 should only be displayed as the immediate response to the user taking an action inside of your app.
 For instance, dialogs can be used to confirm that the user understands the severity of an action,
