Play 스토어 -> Google Play

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -9,7 +9,7 @@ title: 애플리케이션 구조
   집중된 액티비티로 만들어 집니다.</li>
 <li>휴대전화와 같은 앱은 더 깊이 내려가지 않고 동일한 깊이의 다른
   액티비티 사이를 이동하는 용법을 가집니다.</li>
-<li>Gmail과 Play 스토어와 같은 앱은 깊이 들어가는 데이터 뷰의 큰
+<li>Gmail과 Google Play와 같은 앱은 깊이 들어가는 데이터 뷰의 큰
   집합으로 구성되어 있습니다.</li>
 </ul>
 <p>당신의 앱의 구조는 컨텐츠와 사용자가 사용하길 원하는 작업에 크게 달려있습니다.</p>
@@ -70,7 +70,7 @@ title: 애플리케이션 구조
   <div class="layout-content-col span-8">
 
     <img src="../media/app_structure_market.png"><div class="figure-caption">
-      Play 스토어 앱의 시작 화면은 먼저 앱, 음악, 책, 영화, 게임
+      Google Play 앱의 시작 화면은 먼저 앱, 음악, 책, 영화, 게임
       상점을 탐색할 수 있게 합니다. 사용자에게 흥미로운 컨텐츠가
       나열된 잘 정리된 추천과 홍보물이 가득합니다. 검색은 액션 바를
       통해 보기좋게 쓸 수 있습니다.
