--- a/style/devices-displays.html
+++ b/style/devices-displays.html
@@ -29,7 +29,7 @@ title: 기기 및 디스플레이
 
 <h4>모든 기기를 위한 어샛(assets)</h4>
 <p>앱이 어떤 기기에서든 멋지게 보일 수 있도록
-여러가지 화면 해상도(<acronym title="Dots per inch 인치당 도트수">DPI</acronym>)의 리소스를 제공하세요.</p>
+여러가지 화면 해상도(<acronym title="Dots per inch(인치당 도트수)">DPI</acronym>)의 리소스를 제공하세요.</p>
 
   </div>
 </div>
@@ -43,7 +43,8 @@ title: 기기 및 디스플레이
 <h4>계획 수립</h4>
 
 <p>그럼 다양한 화면 크기에 맞는 디자인을 하기 위해 어디서부터 시작해야 할까요?
-한가지 방법은 기본 표준(중간 크기, <acronym title="Medium density 중간 해상도(160 dpi)">MDPI</acronym>)에서 작업한 후
+한가지 방법은 기본 표준(중간 크기, <acronym title="Medium density(중간
+해상도, 160 dpi)">MDPI</acronym>)에서 작업한 후
 다른 크기로 크기를 키우거나 줄이는 것입니다. 다른 방법은 가장 큰 스크린의 기기에서 시작해
 더 작은 화면으로 크기를 절충해 줄여나가는 것입니다.</p>
 
