--- a/style/iconography.html
+++ b/style/iconography.html
@@ -36,7 +36,8 @@ title: 아이콘 표시법
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>모바일 기기에서 런쳐아이콘은 반드시 <strong>48x48 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>이어야 합니다.</p>
+        <p>모바일 기기에서 런쳐아이콘은 반드시 <strong>48x48 <acronym
+      title="Density-independent pixels(밀도 독립 픽셀). 1dp는 160dpi 화면에서 1픽셀.">dp</acronym></strong>이어야 합니다.</p>
 </li>
       <li class="no-bullet with-icon web">
         <p>Google Play에서 런쳐아이콘은 반드시 <strong>512x512 pixels</strong>이어야 합니다.</p>
@@ -133,7 +134,7 @@ title: 아이콘 표시법
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>액션바 아이콘은 폰에서 반드시 <strong>32x32 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>이어야 합니다.</p>
+        <p>액션바 아이콘은 폰에서 반드시 <strong>32x32 <acronym title="Density-independent pixels(밀도 독립 픽셀). 1dp는 160dpi 화면에서 1픽셀.">dp</acronym></strong>이어야 합니다.</p>
 </li>
     </ul>
 </div>
@@ -212,7 +213,7 @@ title: 아이콘 표시법
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>작은 아이콘은 반드시 <strong>16x16 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>이어야 합니다.</p>
+        <p>작은 아이콘은 반드시 <strong>16x16 <acronym title="Density-independent pixels(밀도 독립 픽셀). 1dp는 160dpi 화면에서 1픽셀.">dp</acronym></strong>이어야 합니다.</p>
 </li>
     </ul>
 </div>
@@ -286,7 +287,8 @@ title: 아이콘 표시법
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>알림 아이콘은 반드시 <strong>24x24 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>이어야 합니다.</p>
+        <p>알림 아이콘은 반드시 <strong>24x24 <acronym title="Density-independent pixels(밀도
+독립 픽셀). 1dp는 160dpi 화면에서 1픽셀.">dp</acronym></strong>이어야 합니다.</p>
 </li>
     </ul>
 </div>
