--- a/style/metrics-grids.html
+++ b/style/metrics-grids.html
@@ -3,12 +3,16 @@ layout: default
 title: 길이 및 격자
 ---
 <p>
-기기들은 겉보기 크기만 다양한 것이 아니라, 화면 밀도(<acronym title="도트 퍼 인치">DPI</acronym>)도 다양합니다.
+기기들은 겉보기 크기만 다양한 것이 아니라, 화면 밀도(<acronym
+title="Dot per inch(인치 당 도트)">DPI</acronym>)도 다양합니다.
 여러가지 화면을 한번에 간단히 디자인하기 위해서는, 각 기기를 특정 크기와 밀도에 대해 몇 종류로 구분하는 것이 좋습니다.
-크기 기준의 경우 <em>전화기</em>(600<acronym title="밀도 독립 화소(Density-independent pixel). 1dp는 160 dpi의 경우 1화소가 됩니다.">dp</acronym> 미만)와
+크기 기준의 경우 <em>전화기</em>(600<acronym
+title="Density-independent pixel(밀도 독립 픽셀). 1dp는 160 dpi의 경우 1화소가 됩니다.">dp</acronym> 미만)와
 <em>태블릿</em>(600dp 이상)으로 나눌 수 있습니다.
-밀도 기준의 경우 <acronym title="저해상도(120 dpi)">LDPI</acronym>, <acronym title="중해상도(160 dpi)">MDPI</acronym>,
-<acronym title="고해상도(240 dpi)">HDPI</acronym>, <acronym title="초고해상도(320 dpi)">XHDPI</acronym>으로 나뉩니다.
+밀도 기준의 경우 <acronym title="Low density(저해상도, 120
+dpi)">LDPI</acronym>, <acronym title="Midium density(중해상도, 160 dpi)">MDPI</acronym>,
+<acronym title="High density(고해상도, 240 dpi)">HDPI</acronym>,
+<acronym title="Extra-high density(초고해상도, 320 dpi)">XHDPI</acronym>으로 나뉩니다.
 앱 UI를 디자인할 때는 여러 크기 기준에 대해 다른 배치를 구상하고 밀도 기준에 대비해 여러 비트맵 그림을 준비하는 방식으로 UI를 최적화하세요.
 </p>
 
