text-fields.html - the primary edition

--- a/building-blocks/text-fields.html
+++ b/building-blocks/text-fields.html
@@ -1,11 +1,10 @@
 ---
 layout: default
-title: Text Fields
+title: 텍스트 필드
 ---
-<p>Text fields allow the user to type text into your app. They can be either single line or multi-line.
-Touching a text field places the cursor and automatically displays the keyboard. In addition to
-typing, text fields allow for a variety of other activities, such as text selection (cut, copy,
-paste) and data lookup via auto-completion.</p>
+<p>텍스트 필드는 여러분의 앱에 사용자가 텍스트를 입력할 수 있게합니다. 텍스트 필드는 한 줄 또는 여러 줄이 될 수 있습니다. 
+텍스트 필드를 터치하면 커서가 표시되고 자동적으로 키보드가 표시됩니다. 
+텍스트 입력에 추가적으로 텍스트 선택(자르기, 복사하기, 붙여넣기)과 자동 완성을 통한 데이터 찾기 같은 다양한 기능이 있습니다.</p>
 
 
 
@@ -17,39 +16,36 @@ paste) and data lookup via auto-completion.</p>
 </div>
 
 
-<h4>Single line and multi line</h4>
+<h4>한 줄과 여러 줄</h4>
 
-<p>Single-line fields automatically scroll their content to the left as the text input cursor reaches
-the right edge of the input field. Multi-line text fields automatically break to a new line for
-overflow text and scroll vertically when the cursor reaches the lower edge.</p>
+<p>한 줄 필드는 텍스트 입력 커서가 입력 필드 오른쪽 끝에 위치하면 자동적으로 내용이 왼쪽으로 스크롤됩니다. 
+여러 줄 텍스트 필드는 넘치는 텍스트를 자동적으로 새 줄로 나눠주고, 커서가 아래줄에 닿으면 자동적으로 세로로 스크롤이 됩니다.</p>
 
 
 <img src="../media/text_input_typesandtypedown.png">
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>Text field types</h4>
-<p>Text fields can have different types, such as number, message, or email address. The type determines
-what kind of characters are allowed inside the field, and may prompt the virtual keyboard to
-optimize its layout for frequently used characters.</p>
+<h4>텍스트 필드 형태들</h4>
+<p>텍스트 필드는 숫자, 메세지, 이메일 주소와 같이 다른 형태들을 가집니다. 
+형태는 어떤 종류의 문자들이 필드에 입력되느냐에 따라 결정되고, 자주 사용되는 문자들 배열로 최적화된 가상 키보드가 표시됩니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
 
-<h4>Auto-complete text fields</h4>
-<p>Use auto-complete text fields to present real-time completions or search results in popups, so users
-can enter information more accurately and efficiently.</p>
+<h4>자동완성 텍스트 필드</h4>
+<p>실시간 완성 또는 검색결과가 팝업에 표시되는 자동완성 텍스트 필드를 사용하면 사용자는 더 정확하고 효율적으로 정보를 입력할 수 있습니다.</p>
 
   </div>
 </div>
 
 
-<h2 id="text-selection">Text Selection</h2>
+<h2 id="text-selection">텍스트 선택</h2>
 
 
-<p>Users can select any word in a text field with a long press. This action triggers a text selection
-mode that facilitates extending the selection or choosing an action to perform on the selected text.
-Selection mode includes:</p>
+<p>사용자는 롱 프레스로 텍스트 필드의 단어들을 선택할 수 있습니다. 
+이것은 선택을 확장하거나 선택된 텍스트에 수행할 작업을 고를 수 있게 해주는, 텍스트 선택 모드를 실행합니다.
+선택 모드에 포함되는 것 : </p>
 
 
 <div class="layout-content-row">
@@ -61,13 +57,13 @@ Selection mode includes:</p>
 
 <ol>
 <li>
-<h4>Contextual action bar</h4>
-<p>A contextual action bar (CAB) displays the actions available to perform on the selection:
- typically cut, copy, and paste, but apps can insert additional commands as needed.</p>
+<h4>문맥 액션 바</h4>
+<p>문맥 액션 바(CAB)는 선택된 것에서 수행할 수 있는 작업들을 표시합니다.:
+ 전형적으로 자르기, 복사하기 그리고 붙여넣기 기능이지만 앱들은 필요한 명령을 추가할 수 있습니다.</p>
 </li>
 <li>
-<h4>Selection handles</h4>
-<p>Selection handles can be dragged to select more or less text while remaining in selection mode.</p>
+<h4>선택 조정</h4>
+<p>선택 모드 상태에서 선택 조정은 텍스트를 더 많게 또는 적게 선택하도록 드래그할 수 있습니다.</p>
 </li>
 </ol>
 </div>
