테마 2개인 것을 알기 쉽게 분리.
Signed-off-by: Leonardo YongUk Kim <dalinaum@gmail.com>

--- a/building-blocks/seek-bars.html
+++ b/building-blocks/seek-bars.html
@@ -27,7 +27,7 @@ title: 탐색 바와 슬라이더
   <div class="layout-content-col span-9">
 
     <img src="../media/seekbar_style.png"><div class="figure-caption">
-      홀로 라이트 &amp; 다크의 탐색바
+      홀로 라이트와 홀로 다크 테마의 탐색바
     </div>
 
   </div>
