--- a/building-blocks/progress.html
+++ b/building-blocks/progress.html
@@ -44,10 +44,10 @@ title: 프로그레스와 액티비티
 
     <ol>
 <li class="value-1">
-<h4>액티비티 바 (홀로 다크 테마에서 보임)</h4>
+<h4>활동 바 (Activity Bar, 홀로 다크 테마에서 보임)</h4>
         <p>
 
-대략적인 액티비티 바는 앱을 다운로드 할 때 사용하는데, Google Play가 서버에 아직 연결할 수 없고,
+대략적인 활동 바는 앱을 다운로드 할 때 사용하는데, Google Play가 서버에 아직 연결할 수 없고,
 다운로드를 시작하는데 시간이 얼마나 걸릴지 알 수 없기 때문입니다.
 
         </p>
@@ -66,10 +66,10 @@ title: 프로그레스와 액티비티
 
     <ol>
 <li class="value-2">
-<h4>액티비티 원 (홀로 라이트 테마에서 보임)</h4>
+<h4>활동 원(Activity One, 홀로 라이트 테마에서 보임)</h4>
         <p>
 
-		대략적인 액티비티 원은 Gmail 앱에서 메시지를 불러오는 중일 때 사용하는데, 이메일을 다운로드하는데
+		대략적인 활동 원은 Gmail 앱에서 메시지를 불러오는 중일 때 사용하는데, 이메일을 다운로드하는데
 		시간이 얼마나 걸릴지 알 수 없기 때문입니다.
 
         </p>
@@ -79,6 +79,6 @@ title: 프로그레스와 액티비티
 </div>
 
 
-<p>각 액티비티의 화면에서 하나의 액티비티 표시를 사용할 수 있고, 상황에 따라 적당한 크기로 맞추어야 합니다.
-예를 들어, 내용이 없는 공간에 표시할 때는 큰 액티비티 원이 괜찮겠지만, 더 작은 다이얼로그 박스에는 어울리지
+<p>각 액티비티의 화면에서 하나의 활동 표시를 사용할 수 있고, 상황에 따라 적당한 크기로 맞추어야 합니다.
+예를 들어, 내용이 없는 공간에 표시할 때는 큰 활동 원이 괜찮겠지만, 더 작은 다이얼로그 박스에는 어울리지
 않을 것입니다.</p>
