trial: <h4> 태그가 잘못닫힌 부분 수정.

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -83,7 +83,7 @@ title: 애플리케이션 구조
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>탐색과 액션을 위한 액션 바 설정/h4>
+<h4>탐색과 액션을 위한 액션 바 설정</h4>
 <p>앱의 모든 화면은 일관된 탐색과 중요한 액션의 표시를 위해 액션 바를
     표시해야 합니다.</p>
 <p>최상위 수준에서 엑션바를 적용하는데 특별히 고려해야할 점이 있습니다:</p>
