activity one -> activity circle. 바보같은 실수네요.

--- a/building-blocks/progress.html
+++ b/building-blocks/progress.html
@@ -66,7 +66,7 @@ title: 프로그레스와 액티비티
 
     <ol>
 <li class="value-2">
-<h4>활동 원(Activity One, 홀로 라이트 테마에서 보임)</h4>
+<h4>활동 원(Activity Circle, 홀로 라이트 테마에서 보임)</h4>
         <p>
 
 		대략적인 활동 원은 Gmail 앱에서 메시지를 불러오는 중일 때 사용하는데, 이메일을 다운로드하는데
