--- a/building-blocks/scrolling.html
+++ b/building-blocks/scrolling.html
@@ -12,7 +12,7 @@ title: 스크롤
 
 
 <div class="framed-galaxynexus-land-span-13">
-  <video class="play-on-hover" autoplay><source src="/design/media/scroll_indicator.mp4" type="video/mp4"><source src="/design/media/scroll_indicator.webm" type="video/webm"><source src="/design/media/scroll_indicator.ogv" type="video/ogg"></source></source></source></video>
+  <video class="play-on-hover" autoplay><source src="../media/scroll_indicator.mp4" type="video/mp4"><source src="../media/scroll_indicator.webm" type="video/webm"><source src="../media/scroll_indicator.ogv" type="video/ogg"></video>
 </div>
 
 <div class="figure-caption">
@@ -29,7 +29,7 @@ title: 스크롤
 
 
 <div class="framed-galaxynexus-land-span-13">
-  <video class="play-on-hover" autoplay><source src="/design/media/scroll_index.mp4" type="video/mp4"><source src="/design/media/scroll_index.webm" type="video/webm"><source src="/design/media/scroll_index.ogv" type="video/ogg"></source></source></source></video>
+  <video class="play-on-hover" autoplay><source src="../media/scroll_index.mp4" type="video/mp4"><source src="../media/scroll_index.webm" type="video/webm"><source src="../media/scroll_index.ogv" type="video/ogg"></video>
 </div>
 
 <div class="figure-caption">
