--- a/patterns/actionbar.html
+++ b/patterns/actionbar.html
@@ -184,7 +184,7 @@ title: 액션 바
   </div>
   <div class="layout-content-col span-7">
 
-    <video width="400" class="with-shadow play-on-hover" autoplay><source src="/design/media/tabs_scrolly.mp4" type="video/mp4"><source src="/design/media/tabs_scrolly.webm" type="video/webm"><source src="/design/media/tabs_scrolly.ogv" type="video/ogg"></source></source></source></video><div class="figure-caption">
+    <video width="400" class="with-shadow play-on-hover" autoplay><source src="../media/tabs_scrolly.mp4" type="video/mp4"><source src="../media/tabs_scrolly.webm" type="video/webm"><source src="../media/tabs_scrolly.ogv" type="video/ogg"></video><div class="figure-caption">
       Google Play의 스크롤 탭.
       <div class="video-instructions">&#160;</div>
     </div>
