구성 요소/스위치 초벌번역

--- a/building-blocks/switches.html
+++ b/building-blocks/switches.html
@@ -1,15 +1,19 @@
 ---
 layout: default
-title: Switches
+title: 스위치
 ---
-<p>Switches allow the user to select options. There are three kinds of switches: checkboxes, radio
-buttons, and on/off switches.</p>
+<p>
+스위치를 통해 사용자의 선택을 받을 수 있습니다.
+스위치에는 세 가지 종류가 있습니다. 각각 체크박스, 라디오 버튼, 온오프 스위치로 부릅니다.
+</p>
 
-<h2 id="checkboxes">Checkboxes</h2>
+<h2 id="checkboxes">체크박스</h2>
 
 
-<p>Checkboxes allow the user to select multiple options from a set. Avoid using a single checkbox to
-turn an option off or on. Instead, use an on/off switch.</p>
+<p>
+체크박스는 항목들 중 여러 개를 같이 선택할 수 있을 때 씁니다.
+어떤 옵션을 켜고 끄는 용도로 체크박스를 사용하지 마세요. 그러한 용도에는 온오프 스위치를 씁니다.
+</p>
 
 
 <div style="text-align: center">
@@ -17,12 +21,14 @@ turn an option off or on. Instead, use an on/off switch.</p>
 </div>
 
 
-<h2 id="radio-buttons">Radio Buttons</h2>
+<h2 id="radio-buttons">라디오 버튼</h2>
 
 
-<p>Radio buttons allow the user to select one option from a set. Use radio buttons for exclusive
-selection if you think that the user needs to see all available options side-by-side. Otherwise,
-consider a spinner, which uses less space.</p>
+<p>
+라디오 버튼은 여러 항목 중 하나만을 고를 수 있습니다.
+모든 항목을 나란히 볼 필요가 있을 때에만 라디오 버튼을 사용해주세요.
+그런 경우가 아니면 스피너를 고려하세요. 공간을 덜 차지합니다.
+</p>
 
 
 <div style="text-align: center">
@@ -30,10 +36,10 @@ consider a spinner, which uses less space.</p>
 </div>
 
 
-<h2 id="switches">On/off Switches</h2>
+<h2 id="switches">온오프 스위치</h2>
 
 
-<p>On/off switches toggle the state of a single settings option.</p>
+<p>온오프 스위치는 특정 설정을 켜고 끄는 데에 사용합니다.</p>
 
 
 <div style="text-align: center">
