--- a/style/writing.html
+++ b/style/writing.html
@@ -180,7 +180,7 @@ title: 문체
       </tr></thead>
 <tbody><tr>
 <td colspan="3">
-        MyAppActivity Activity(MyApp 애플리케이션)가 응답하지 않습니다.
+        MyAppActivity 액티비티(MyApp 애플리케이션)가 응답하지 않습니다.
         </td>
       </tr></tbody>
 <tfoot><tr>
