some word are modified for consistency

--- a/patterns/pure-android.html
+++ b/patterns/pure-android.html
@@ -12,7 +12,7 @@ title: 순수한 안드로이드
   <div class="layout-content-col span-5">
 
 <h4>다른 플랫폼의 UI 요소를 흉내 내지 마세요</h4>
-<p>안드로이드 앱을 만드실 때, 다른 플랫폼의 테마를 가진 UI 요소를 그대로 가져오거나 흉내내려 하지 마세요. 이 스타일 안내서의 <a href="../building-blocks/index.html">Building Blocks</a> 부분을 검토하여, 안드로이드의 주요 UI 요소에는 어떤 것이 있고 시스템 기본 테마에서 어떤 모양인지 알아보세요. 또한 안드로이드 플랫폼에 제공되는 앱을 참고해서 그러한 요소가 앱에 어떤 방식으로 적용되어 있는지 감을 잡으세요. UI 요소를 입맛에 맞게 고치실 때는 다른 플랫폼의 관례를 따르는 것이 아니라, 여러분의 브랜딩에 맞추어 조심스럽게 해야 합니다.</p>
+<p>안드로이드 앱을 만드실 때, 다른 플랫폼의 테마를 가진 UI 요소를 그대로 가져오거나 흉내내려 하지 마세요. 이 스타일 안내서의 <a href="../building-blocks/index.html">구성 요소</a> 부분을 검토하여, 안드로이드의 주요 UI 요소에는 어떤 것이 있고 시스템 기본 테마에서 어떤 모양인지 알아보세요. 또한 안드로이드 플랫폼에 제공되는 앱을 참고해서 그러한 요소가 앱에 어떤 방식으로 적용되어 있는지 감을 잡으세요. UI 요소를 입맛에 맞게 고치실 때는 다른 플랫폼의 관례를 따르는 것이 아니라, 여러분의 브랜딩에 맞추어 조심스럽게 해야 합니다.</p>
 
   </div>
   <div class="layout-content-col span-8">
