--- a/building-blocks/lists.html
+++ b/building-blocks/lists.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 목록
+title: 리스트
 ---
-<p>목록은 여러 줄의 항목을 세로로 정렬해서 보여줍니다. 항목은 하위 탐색뿐만 아니라 데이터를 선택
+<p>리스트은 여러 줄의 항목을 세로로 정렬해서 보여줍니다. 항목은 하위 탐색뿐만 아니라 데이터를 선택
 할 때에도 사용할 수 있습니다.</p>
 
 
@@ -19,11 +19,11 @@ title: 목록
 <ol>
 <li>
 <h4>섹션 구분선</h4>
-<p>목록의 내용을 그룹으로 묶고 살펴보기를 간편하게 하기 위해 섹션 구분선을 사용합니다.</p>
+<p>리스트의 내용을 그룹으로 묶고 살펴보기를 간편하게 하기 위해 섹션 구분선을 사용합니다.</p>
 </li>
 <li>
 <h4>라인 항목</h4>
-<p>목록 항목은 각기 다른 모습으로 정렬하여 단순한 한줄 항목, 여러줄 항목, 아이콘이 있는
+<p>리스트 항목은 각기 다른 모습으로 정렬하여 단순한 한줄 항목, 여러줄 항목, 아이콘이 있는
 사용자정의 항목, 체크박스(checkbox), 그리고 동작 버튼을 포함하여 다양한 데이터 형태를  
 수용할 수 있습니다.</p>
 </li>
