창조적인 비전 -> 창조적 비전

--- a/get-started/creative-vision.html
+++ b/get-started/creative-vision.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 창조적인 비전
+title: 창조적 비전
 ---
 <img src="../media/creative_vision_main.png">
 <div class="vspace size-1">&#160;</div>
