incorrect postposition is modified

--- a/building-blocks/grid-lists.html
+++ b/building-blocks/grid-lists.html
@@ -3,8 +3,8 @@ layout: default
 title: 그리드 리스트
 ---
 <img src="../media/gridview_overview.png">
-<p>그리드 리스트은 표준 리스트 뷰 대신 사용할 수 있습니다. 이미지와 함께 데이터 모음을 보여주기 위한 가장 적당한
-수단입니다. 단순한 리스트과는 달리 그리그 리스트은 수직, 수평 방향으로 스크롤 할 수 있습니다.</p>
+<p>그리드 리스트는 표준 리스트 뷰 대신 사용할 수 있습니다. 이미지와 함께 데이터 모음을 보여주기 위한 가장 적당한
+수단입니다. 단순한 리스트과는 달리 그리그 리스트는 수직, 수평 방향으로 스크롤 할 수 있습니다.</p>
 
 
 
@@ -46,7 +46,7 @@ title: 그리드 리스트
   <div class="layout-content-col span-6">
 
 <h4>수평 스크롤</h4>
-<p>수평 스크롤 리스트은 항목 그리드의 수직 방향을 고정합니다. 수직 스크롤 리스트에 비하자면, 정렬 방향은 위에서 아래로,
+<p>수평 스크롤 리스트는 항목 그리드의 수직 방향을 고정합니다. 수직 스크롤 리스트에 비하자면, 정렬 방향은 위에서 아래로,
 왼쪽에서 오른쪽으로 바뀝니다. 스크롤 방향을 나타내는 가장 오른쪽 편에 있는 항목들을 잘라내는 동일한 기술을 사용합니다.</p>
 <p>뷰와 내용의 탐색을 위한 수평 방향의 제스처가 충돌할 수 있으니 스크롤 탭을 수평 스크롤 그리드 리스트이 들어간 뷰를 전환하는데
 사용하지 마세요. 그리드 리스트에 대한 뷰 탐색에 대해 스크롤 탭을 표시하려면, 리스트 탐색을 위해 수직 그리드 스크롤을 사용하세요.</p>
