--- a/building-blocks/lists.html
+++ b/building-blocks/lists.html
@@ -2,7 +2,7 @@
 layout: default
 title: 리스트
 ---
-<p>리스트은 여러 줄의 항목을 세로로 정렬해서 보여줍니다. 항목은 하위 탐색뿐만 아니라 데이터를 선택
+<p>리스트는 여러 줄의 항목을 세로로 정렬해서 보여줍니다. 항목은 하위 탐색뿐만 아니라 데이터를 선택
 할 때에도 사용할 수 있습니다.</p>
 
 
