untranslated words are fixed

--- a/patterns/pure-android.html
+++ b/patterns/pure-android.html
@@ -110,5 +110,5 @@ title: 순수한 안드로이드
 
 <p>여러분의 앱이 여러 가지 서로 다른 크기의 화면에 표시된다는 것을 잊지 마세요. 다른 크기와 밀도를 가진 화면에 맞도록 비주얼 애셋을 만들고, 장치 형태에 따라 UI 크기가 적절하게 조정될 수 있도록 multi-pane layout 등의 개념을 적용하십시오.</p>
 
-<p>자세한 내용은 이 디자인 지침서의 <a href="../style/devices-displays.html">Devices and Displays</a>와
-<a href="multi-pane-layouts.html">Multi-pane Layouts</a>를 참고하세요.</p>
+<p>자세한 내용은 이 디자인 지침서의 <a href="../style/devices-displays.html">기기 및 디스플레이</a>와
+<a href="multi-pane-layouts.html">다중 창 레이아읏</a>을 참고하세요.</p>
