반말과 오타수정
Signed-off-by: Leonardo YongUk Kim <dalinaum@gmail.com>

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -181,7 +181,7 @@ title: 애플리케이션 구조
 
     <img src="../media/app_structure_fixedtabs.png"><div
     class="figure-caption">
-      YouTube는 생대적으로 기능 부분의 연관없는 다른 뷰로 이동하기 위해 고정 탭을 사용합니다.
+      YouTube는 상대적으로 기능 부분의 연관없는 다른 뷰로 이동하기 위해 고정 탭을 사용합니다.
    </div>
 
 
@@ -200,19 +200,19 @@ title: 애플리케이션 구조
 <img src="../media/app_structure_shortcut_on_item.png">
 <div class="figure-caption">
   Music은 사용자가 카테고리 뷰 (앨범)에서 데이터 항목 (노래)로 직접
-  접근할 수 있기 때문에, 노래 구체 뷰를 탐색할 필요가 없다.
+  접근할 수 있기 때문에, 노래 구체 뷰를 탐색할 필요가 없습니다.
 </div>
 
 
 <h4>여러 데이터 항목에 대해 행동하기</h4>
 
 <p>카테고리 뷰가 대부분 사람들을 구체적인 컨텐츠로 안내하지만, 가끔
-데이터 모음으로서 행동하는 것도 이점이 있다는 것을 명심하자.</p>
+데이터 모음으로서 행동하는 것도 이점이 있다는 것을 명심하십시요.</p>
 
 <p>예를 들어, 구체 뷰에서 항목을 삭제하는 것을 허용하면 카테고리
-뷰에서 여러 아이템을 삭제하는 것도 허용해야 한다. 개별 뷰의 행동이
-항목의 모음에서 어떻게 응용될 수 있을지 분석하라. 카테고리 뷰에서 다중
-항목에 대한 행동을 할 수 있게 다중 선택을 사용하라.</p>
+뷰에서 여러 아이템을 삭제하는 것도 허용해야 합니다. 개별 뷰의 행동이
+항목의 모음에서 어떻게 응용될 수 있을지 분석하세요. 카테고리 뷰에서 다중
+항목에 대한 행동을 할 수 있게 다중 선택을 사용합시다.</p>
 
 <h2 id="details">Details</h2>
 
