잇습니다. -> 있습니다.
Signed-off-by: Leonardo YongUk Kim <dalinaum@gmail.com>

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -163,7 +163,7 @@ title: 애플리케이션 구조
 <p>만약 카테고리가 유사하고, 예측가능하고, 꽤 밀접하다면, 스크롤
     탭(Scrolling tabs)를 사용하세요. 탭의 일부 항목만 목록에
     표시됩니다. 관리가능한 수준에서 스크롤 탭의 수를 유지하는 
-    것은 탐색이 덜 힘들게 합니다. 중요한 규칙이 잇습니다: 5&#8211;7 탭
+    것은 탐색이 덜 힘들게 합니다. 중요한 규칙이 있습니다: 5&#8211;7 탭
     이상은 안됩니다.</p>
 
     <img src="../media/app_structure_scrolltabs.png"><div
