구체 뷰 번역 시작

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -214,20 +214,21 @@ title: 애플리케이션 구조
 항목의 모음에서 어떻게 응용될 수 있을지 분석하세요. 카테고리 뷰에서 다중
 항목에 대한 행동을 할 수 있게 다중 선택을 사용합시다.</p>
 
-<h2 id="details">Details</h2>
+<h2 id="details">구체</h2>
 
 
-<p>The detail view allows you to view and act on your data. The layout of the detail view depends on
-the data type being displayed, and therefore differs widely among apps.</p>
+<p>구체 뷰는 사용자의 데이터를 보고 행동하게 합니다. 구체 뷰의
+레이아웃은 표현될 데이터에 달려있으며 앱에 따라 다양합니다.</p>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-<h4>Layout</h4>
-<p>Consider the activities people will perform in the detail view and arrange the layout accordingly.
-For immersive content, make use of the lights-out mode to allow for distraction-free viewing of
-full-screen content.</p>
+<h4>레이아웃</h4>
+<p>구체 뷰에서 동작시키고 조작할 엑티비티와 이용할 레이아웃에 따라
+    엑티비티들을 고려하세요. 전체 화면으로 정신 사납지 않으면서
+    실감나게 하려면면 소등된 것 (기타 UI가 최소화 된 버전) 을 만들어야
+    합니다.</p>
 
     <img src="../media/app_structure_people_detail.png">
 </div>
